Get rid of duplicate white space. Solve left-right align content with top light gray section.

--- a/src/SearchBlock/styles.less
+++ b/src/SearchBlock/styles.less
@@ -46,6 +46,18 @@ div#page-document {
   div.searchapp {
     background-color: @s-light-gray;
 
+    div.body-content {
+      padding: 0px !important;
+
+      div.three.wide.widescreen.column {
+        padding-left: 0px;
+      }
+
+      div.nine.wide.widescreen.column {
+        padding-right: 0px;
+      }
+    }
+
     div.sui-search-box {
       padding-top: 10px;
 
